# read-the-room

./: .gitignore  Makefile  Makefile.in  README.md  cli.c  configure  configure.ac  cronparser.c  cronparser.h  daemonize.c  daemonize.h  jackclient.c  notes.md  pickfile.c  pickfile.h  rtrd.c  runrtrdtest.sh  sockets.c  testconfig  testcronparser.c  testdaemon.c  testpickfile.c  testrtrd.c
c-common/: byte-order.h  float.h  int.h  jack-client.h  jack-port.c  memory.c  observe-signal.c  sound-file.c  sound-file.h
src/: Makefile  Makefile.am  Makefile.in  cronparser.c  cronparser.h  daemonize.c  daemonize.h  jackclient.c  memory.c  memory.h  pickfile.c  pickfile.h  rtrd.c  sockets.c  sockets.h  testdaemon.c  testpickfile.c  testrtrd.c  testserver.c
src/.deps/: cronparser.Po  daemonize.Po  memory.Po  pickfile.Po  rtrd.Po  sockets.Po  testclient.Po  testcronparser.Po  testdaemon.Po  testpickfile.Po  testrtrd.Po  testserver.Po
src/c-common/: README  byte-order.c  file.c  jack-client.c  jack-port.h  jack-ringbuffer.c
tests/: Makefile  Makefile.am  Makefile.in  testclient.c  testcronparser.c  testcronparser.config  testdaemonize.c  testpickfile.c  testrtrd.c
tests/.deps/: cronparser.Po  mem.Po  memory.Po  testcronparser.Po
