bin_PROGRAMS = rtrd
rtrd_SOURCES = rtrd.c cronparser.c sockets.c daemonize.c pickfile.c

#check_PROGRAMS = testdaemon testpickfile testcronparser testclient testserver testrtrd
#testdaemon_SOURCES = testdaemon.c daemonize.c
#testpickfile_SOURCES = testpickfile.c cronparser.c pickfile.c
#testcronparser_SOURCES = testcronparser.c cronparser.c
#testclient_SOURCES = testclient.c sockets.c
#testserver_SOURCES = testserver.c sockets.c
#testrtrd_SOURCES = testrtrd.c sockets.c

#test_PROGRAMS = 

#TESTS = $(test_PROGRAMS)
